--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-        <link href="../css/styles.css" rel="stylesheet" />
+        <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+        <link href="css/styles.css" rel="stylesheet" />
         <title>Expresiones regulares</title>
     </head>
 
@@ -21,7 +21,7 @@
                     </div>
 
                     <div class="col-md-6 justify-content-right">
-                        <img src="../img/cuteLin.png" class="img-fluid" style="max-height: 125px;">
+                        <img src="img/cuteLin.png" class="img-fluid" style="max-height: 125px;">
                     </div>
 
                 </div>
@@ -57,13 +57,13 @@
 
                             <!-- Columna derecha: imagen -->
                             <div class="col-5 text-center">
-                            <img src="../img/thinkingLin.png" class="img-fluid" style="max-height: 200px;">
+                            <img src="img/thinkingLin.png" class="img-fluid" style="max-height: 200px;">
                             </div>
 
                             <!-- Imagen oculta que aparece solo si la frase es correcta -->
                             <div class="row d-flex mt-3">
                                 <div class="col-5">
-                                    <img id="imagenFrase" src="../img/BienGojo.png" alt="Sorpresa" 
+                                    <img id="imagenFrase" src="img/BienGojo.png" alt="Sorpresa" 
                                     class="img-fluid d-none justify-content-left ms-4" style="max-width: 150px;"/>
                                 </div>
                                 
@@ -103,7 +103,7 @@
                         <!--Imagen sorpresa!-->
                         <div class="row d-flex mt-3">
                                 <div class="col-5">
-                                    <img id="imagenFecha" src="../img/cumpleGojo.jpg" alt="Feliz cumple Gojo" 
+                                    <img id="imagenFecha" src="img/cumpleGojo.jpg" alt="Feliz cumple Gojo" 
                                     class="img-fluid d-none justify-content-left ms-4" style="max-width: 150px;"/>
                                 </div>
                                 
@@ -145,7 +145,7 @@
                 </div>
 
                 <div class="col-md-6">
-                    <img src="../img/tiredLin.png" class="img-fluid mx-auto d-block" style="max-width:300px">
+                    <img src="img/tiredLin.png" class="img-fluid mx-auto d-block" style="max-width:300px">
                 </div>
             </div>
 
@@ -166,13 +166,13 @@
             <!-- Imágenes -->
             <div class="carousel-inner rounded shadow-lg">
                 <div class="carousel-item active">
-                <img src="../img/actividad1.png" class="d-block w-100" alt="Foto 1">
+                <img src="img/actividad1.png" class="d-block w-100" alt="Foto 1">
             </div>
             <div class="carousel-item">
-                <img src="../img/actividad2.png" class="d-block w-100" alt="Foto 2">
+                <img src="img/actividad2.png" class="d-block w-100" alt="Foto 2">
             </div>
             <div class="carousel-item">
-                <img src="../img/actividad3.png" class="d-block w-100" alt="Foto 3">
+                <img src="img/actividad3.png" class="d-block w-100" alt="Foto 3">
             </div>
             </div>
 
@@ -195,7 +195,8 @@
         <!-- Bootstrap (incluye Popper) -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
         <!--JS de la pagina-->
-        <script src="../js/funciones.js"></script>
+        <script src="js/funciones.js"></script>
 
     </body>
+
 </html>
